# GeoRT

./: .gitignore  README.md  pyproject.toml
configs/: gates.yaml  geort_equiv.yaml
data/: README.md  anchors_custom_right_arc_bending_v3_pc1beta1_lateral085_ringmono_frozenrobot.npz  custom_left.npz  hts_left.npy  hts_left_20260707_anchor_v4_rest.json  hts_left_20260707_anchor_v4_rest.npy  hts_right.npy  hts_right_20260707_anchor_v4_rest.json  hts_right_20260707_anchor_v4_rest.npy
docs/: AnyDexRT 改造执行手册.md  ablation_fk_backend.md  contact_refinement_lambda1e-3_report.md  contact_right_d1_training_report.md  contact_runtime_acceptance.json  contact_runtime_lambda1e-3_acceptance.json  current_left_right_checkpoint_recipe.md  motion_local_frame_validation.md  realtime_c2_quest.md  todo.md
geort/: analytic_fk.py  dataset.py  dataset_manifest.py  export.py  formatter.py  frame_convention.py  keypoint_normalization.py  loss.py  model.py  motion_frames.py  trainer.py  trainer_cli.py  training_targets.py
scripts/: evaluate_anchor_pc1beta1_fix.py  evaluate_c2el_s42.py  verify_rotation_variant.py
tests/: anchor_qa_fixture.py  test_aa_limit_calibration.py  test_analytic_fk.py  test_analytic_fk_rotations.py  test_anchor_analytic_compat.py  test_anchor_analytic_fk.py  test_anchor_compat.py  test_anchor_human_geometry.py  test_anchor_interpolate.py  test_anchor_mining.py  test_anchor_qa_report.py  test_anchor_qa_report_integration.py  test_anchor_qa_report_runner.py  test_anchor_qa_report_static.py  test_anchor_runtime_loader.py  test_anchor_spec.py  test_anydexrt_trainer.py  (+62 more)
(+198 files in other folders)
